tests/transpiler/x/java/let_and_print.error
exit status 1
Main.java:6: error: bad operand types for binary operator '=='
        System.out.println((a + b == null ? "nil" : a + b));
                                  ^
  first type:  int
  second type: <null>
1 error
