tests/transpiler/x/java/let_and_print.java
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 18:28:14 UTC
public class Main {
    public static void main(String[] args) {
        var a = 10;
        Integer b = 20;
        System.out.println((a + b == null ? "nil" : a + b));
    }
}
